@@ -141,6 +141,9 @@ public class FilmDbStorage implements FilmStorage {
 
     @Override
     public void delete(Long id) {
+        if (findById(id).isEmpty()) {
+            throw new NotFoundException("Фильм с id " + id + " не найден");
+        }
         deleteGenresByFilmId(id);
         deleteLikesByFilmId(id);
         String query = "delete from films where film_id = ?";
@@ -251,7 +254,7 @@ public class FilmDbStorage implements FilmStorage {
     }
 
     private void populateLikesAndGenres(Collection<Film> films) {
-        List<Long> filmIds = films.stream().map(Film::getId).toList();
+        List<Long> filmIds = films.stream().map(Film::getId).collect(Collectors.toList());
         Map<Long, Set<Genre>> genresByFilmId = findGenresByFilmIds(filmIds);
         Map<Long, Set<Long>> likesByFilmId = findLikesByFilmIds(filmIds);
         for (Film film : films) {
